# web2print

./: .gitignore  .replit  README.md  app.py  como_usar_API.md  pyproject.toml  replit.md
attached_assets/: Pasted-2-O-Lado-do-Cliente-JavaScript-AJAX-Esta-a-parte-que-far-a-comunica-o-em-tempo-real-com-sua-A-1758913739085_1758913739086.txt  content-1759039743875.md  web2print-integration_1759088121498.php
backup/templates/: base.html  index.html  register.html  upload.html
instance/: users.db
templates/: admin_binding_form.html  admin_bindings.html  admin_dashboard.html  admin_finishing_form.html  admin_finishings.html  admin_login.html  admin_paper_form.html  admin_papers.html  admin_weight_form.html  base.html  cart.html  configure.html  index.html  login.html  register.html
web2print-api/: .env.example  app.py  requirements.txt
web2print-api/static/: style.css
web2print-api/static/css/: style.css
web2print-api/templates/: admin_login.html  admin_paper_form.html  admin_paper_weights.html  index.html  register.html  upload.html  users.html
wordpress-plugin/: .gitignore  README.md  web2print-integration.php
wordpress-plugin/css/: web2print-admin.css  web2print-style.css
wordpress-plugin/js/: web2print-ajax.js
wordpress-plugin/templates/: calculator-form.php
