[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-wtf>=1.2.2",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pymupdf>=1.26.4",
    "pypdf2>=3.0.1",
    "requests>=2.32.5",
    "werkzeug>=3.1.3",
    "fitz>=0.0.1.dev2",
]
